crates/tribute-front/tests/snapshots/expr_coverage__nil_literal.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @nothing() -> core.nil convention(direct) {
      %0 = core.nil_value : core.nil
      tribute_control.return %0
  }
}
