crates/tribute-front/tests/snapshots/expr_coverage__parenthesized_expression.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
assertion_line: 179
expression: ir_text
---
core.module @test {
  func.func @wrapped() -> core.i32 {
      %0 = arith.const {value = unit} : core.nil
      %1 = core.unrealized_conversion_cast %0 : core.i32
      func.return %1
  }
}
