crates/tribute-front/tests/snapshots/expr_coverage__rune_literal.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @letter() -> core.i32 convention(cps) {
      %0 = arith.const {value = 97} : core.i32
      tribute_control.return %0
  }
}
