crates/tribute-front/tests/snapshots/expr_coverage__string_equality_operators.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  !__logical_tuple_tuple_3_1_2_4_bool_4_bool = adt.struct<__logical_tuple_tuple_3_1_2_4_bool_4_bool("0": core.i1, "1": core.i1)>
  !t0 = tribute_control.func_sig<(tribute_rt.anyref, tribute_rt.anyref) -> core.i1, {tribute.calling_convention = 2}>
  !__logical_tuple_tuple_3_1_2_4_bool_4_bool_1 = adt.typeref<{name = "__logical_tuple_tuple_3_1_2_4_bool_4_bool"}>

  tribute_control.func @"String::=="(%arg0: tribute_rt.anyref, %arg1: tribute_rt.anyref) -> core.i1 convention(cps)
  tribute_control.func @"String::!="(%arg0: tribute_rt.anyref, %arg1: tribute_rt.anyref) -> core.i1 convention(cps)
  tribute_control.func @comparisons(%0: tribute_rt.anyref, %1: tribute_rt.anyref) -> !__logical_tuple_tuple_3_1_2_4_bool_4_bool_1 convention(cps) {
      %2 = tribute_control.call %0, %1 {callee = @"String::=="} : core.i1
      %3 = tribute_control.call %0, %1 {callee = @"String::!="} : core.i1
      %4 = adt.struct_new %2, %3 {type = !__logical_tuple_tuple_3_1_2_4_bool_4_bool} : !__logical_tuple_tuple_3_1_2_4_bool_4_bool_1
      tribute_control.return %4
  }
}
