crates/tribute-front/tests/snapshots/expr_coverage__string_literal.snap
---
source: crates/tribute-front/tests/expr_coverage.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @greeting() -> tribute_rt.anyref convention(direct) {
      %0 = adt.string_const {value = "hello"} : tribute_rt.anyref
      tribute_control.return %0
  }
}
